<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/spacing_large">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/task_title_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newTaskTitleInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences"
            android:maxLines="2" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:hint="@string/task_due_date_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newTaskDateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/task_subject_field"
        android:textAppearance="?attr/textAppearanceLabelLarge" />

    <Spinner
        android:id="@+id/newTaskSubjectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/task_subject_field"
        android:minHeight="@dimen/button_height" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/task_priority_field"
        android:textAppearance="?attr/textAppearanceLabelLarge" />

    <Spinner
        android:id="@+id/newTaskPrioritySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/task_priority_field"
        android:minHeight="@dimen/button_height" />

</LinearLayout>
